--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 <body>
     <div class="container">
         <header style="margin-bottom: 1.5rem;">
-            <img src="logo.png" alt="Логотип игры" style="height:250px; vertical-align: middle;">
+            <img src="logo.png" alt="Логотип игры" style="height:200px; vertical-align: middle;">
             <h1 style="display: inline-block; margin-left: 10px; vertical-align: middle;">Настольная игра "Сокровища неба"</h1>
         </header>
         <button id="drawCard">Вытянуть карту</button>
-        <button id="resetHistory">Игра окончена</button>
+        <button id="resetHistory">Завершить игру</button>
         <div id="result"></div>
         <div id="prizeImage" style="margin-top: 1rem;"></div>
         <div id="history"></div>
